--- a/tinymce/jscripts/tiny_mce/content.css
+++ b/tinymce/jscripts/tiny_mce/content.css
@@ -1,7 +1,7 @@
 /* CSS file for tinyMCE content_css */
 
 ol, ul, p, td {
-	font-size: 16px;
+	font-size: 13pt;
 	font-family: times new roman,times,serif;
 	line-height:1.15;
 	margin:0;
@@ -26,7 +26,7 @@ img {
 }
 
 .standart {
-	font-size: 16px;
+	font-size: 13pt;
 	font-family: times new roman,times,serif;
 	line-height:1.15;
 	white-space: pre-wrap;
